Page MenuHome GnuPG

Make gnupg more friendly to multiple readers
Closed, ResolvedPublic

Description

Problem:

  • multiple readers, at least one always connected to computer but not used with

gnupg

  • multiple usb-readers used token-like with openpgp-cards (connect when you need it)
  • pcsc readers are addressed in gnupg2 via reader-port string including

manufacturer name (serial) someid0 someid1

> every reader has it's own reader-port string. this also changes at someid1 if

connected in different order. only one can be selected at a time, you can't
switch on the fly (need to change scdaemon.conf, kill scdaemon, SIGHUB gnupg-agent)

What's current: if reader-port is not set, the first reader is used.

What's needed (one or all of the following):
a) block a reader from being used with gnupg, making the next one the first one.
b) enumerate all currently connected devices by connection time, allow selection
by this enumeration.
c) keywords for selection like oldest, newest connected device (newest-1,
newest-2) etc.

Details

Version
2.0.22

Event Timeline

C3P0 set Version to 2.0.22.
C3P0 added a subscriber: C3P0.

Please see T1930. And if you have time, please
test it for PC/SC.
For GnuPG's internal CCID driver, you can use reader-port=1 for the case of a).
I don't know if partial match will be useful for internal CCID driver.

c3po: There is no need to sighup gpg-agent.
gpgconf --reload (or --kill) dirmngr is sufficent

Implemented in 2.1.19